--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.18.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "astro": "^5.9.1",
     "sharp": "^0.34.2"
   },
